<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="model"
            type="com.example.matrimony.model.Profile" />

        <variable
            name="myClickListener"
            type="com.example.matrimony.adapter.ProfileListAdapter" />
        <variable
            name="position"
            type="int" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatTextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/shortlist"
                android:drawableStart="@drawable/ic_baseline_chat_24"
                android:drawablePadding="10dp"
                android:id="@+id/chatNow"
                android:padding="8dp"
                android:text="@string/chart_now"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/shortlist"
                android:padding="8dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_baseline_star_border_24"
                android:drawableEnd="@drawable/ic_baseline_more_vert_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/chatNow"
                android:text="@string/shortlist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                app:layout_constraintTop_toBottomOf="@+id/chatNow"
                app:imgRes="@{model.imageName}"
                android:scaleType="centerCrop"
                android:onClick="@{(v) -> myClickListener.navigateToProfileView(model)}"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="120dp"
                android:layout_height="120dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profileName"
                android:padding="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@{model.name}"
                app:layout_constraintTop_toBottomOf="@+id/shortlist"
                app:layout_constraintLeft_toRightOf="@+id/image"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/age"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:onClick="@{(v) -> myClickListener.navigateToProfileView(model)}"
                android:text="@{@string/age_format(model.age, model.height)}"
                app:layout_constraintTop_toBottomOf="@+id/profileName"
                app:layout_constraintLeft_toRightOf="@+id/image"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description"
                android:padding="8dp"
                android:text="@{model.description}"
                android:onClick="@{(v) -> myClickListener.navigateToProfileView(model)}"
                app:layout_constraintTop_toBottomOf="@+id/age"
                app:layout_constraintLeft_toRightOf="@+id/image"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/location"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@{model.location}"
                android:onClick="@{(v) -> myClickListener.navigateToProfileView(model)}"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintLeft_toRightOf="@+id/image"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/image"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

            <View
                android:id="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_view_color" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/like"
                android:padding="8dp"
                android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/like_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/not_interest"
                app:layout_constraintTop_toBottomOf="@id/like"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/sent_interest"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_outline"
                android:text="@string/not_interest"
                android:onClick="@{(view) -> myClickListener.notInterest(position)}"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sent_interest"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/like"
                app:layout_constraintLeft_toRightOf="@+id/not_interest"
                app:layout_constraintRight_toRightOf="parent"
                android:onClick="@{(view) -> myClickListener.onInterest(position)}"
                android:background="@drawable/button_background"
                android:drawablePadding="10dp"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_baseline_send_24"
                android:text="@string/send_interest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>